cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(WIN32)
        message(VERBOSE "Build in MSVC")

        set(CMAKE_CXX_FLAGS "/W1 /WX /wd4244 /wd4267 /wd4018 /wd4305 /wd4805 /wd26812 /wd26439 /MP -EHsc")
else()
        message(VERBOSE "Build in gcc-12")

        set(CMAKE_C_COMPILER "gcc-12")
        set(CMAKE_CXX_COMPILER "g++-12")
        set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-sign-compare")
endif(WIN32)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")

project(leetcode_daily
        LANGUAGES CXX)

add_subdirectory(src)
